--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,6 +5,21 @@
 
 <div class="hero">
     <header>
+        <% if(errMsgs){ %>
+        <section class="header-flash error">
+            <% errMsgs.forEach((msg) => { %>
+            <p><%= msg %></p>
+            <% }); %>
+        </section>
+        <% } %>
+        <% if(successMsgs){ %>
+        <section class="header-flash success">
+            <% successMsgs.forEach((msg) => { %>
+            <p><%= msg %></p>
+            <% }); %>
+        </section>
+        <% } %>
+        
         <section id="logo-wrapper">
             <a href="/">
                 <img src="/images/common/logos/black-logo.svg" alt="Anarchy Futurism logo">
@@ -20,7 +35,15 @@
         </section>
         <section id="user-nav-wrapper">
             <nav>
-                <a href="/signin"><i class="far fa-user"></i></a>
+                <div>
+                    <a href="user/signin"><i class="far fa-user"></i></a>
+                    <% if(userIsLoggedIn){ %>
+                    <section class="dropdown">
+                        <a href="/user/orders">Your Orders <i class="fas fa-tags"></i></a>
+                        <a href="/user/logout">Logout <i class="fas fa-sign-out-alt"></i></a>
+                    </section>
+                    <% } %>
+                </div>
                 <a href="/wishlist"><i class="far fa-heart"></i></a>
                 <a href="/cart"><i class="fas fa-shopping-cart"></i></a>
             </nav>
@@ -42,24 +65,22 @@
         <h1>THE MOST<span>POPULAR</span></h1>
     </div>
     <div class="products-wrapper">
-        <% for(let i=0; i < 3; i++){ %>
+        <% products.forEach((product) => { %>
 
         <%- include ./shop/partials/product-card %>
     
-        <% } %>
+        <% }); %>
     </div>
 </div>
 
 <div class="popular-brands">
-    <h2>POPULAR BRANDS</h2>
+    <h2>FEATURED BRANDS</h2>
     <div class="brands-wrapper">
-
-        <% for(let i=0; i < 4; i++){ %>
+        <% brands.forEach((brand) => { %>
 
         <%- include ./shop/partials/brand-card %>
     
-        <% } %>
-
+        <% }); %>
     </div>
 </div>
 
