--- a/views/shop/partials/brand-card.ejs
+++ b/views/shop/partials/brand-card.ejs
@@ -1,4 +1,4 @@
-<a class="brand-card" href="/brands/brandname">
-    <img src="/images/home/brands/nike.svg" alt="Nike">
-    <span class="brand-name">NIKE</span>
+<a class="brand-card" href="/brands/<%= brand._id %>">
+    <img src="<%= brand.logoImagePath %>" alt="<%= brand.brandName %>">
+    <span class="brand-name"><%= brand.brandName %></span>
 </a>
