--- a/views/shop/product.ejs
+++ b/views/shop/product.ejs
@@ -6,62 +6,40 @@
 
 <div class="product">
     <div class="image-wrapper">
-        <img src="/images/products/Nike-Air270-white.svg" alt="Nike-Air270-white">
+        <img src="<%= product.imagePath %>" alt="<%=`${product.brandName} ${product.itemName}`%>">
     </div>
     <div class="info">
         <div class="main">
             <div class="meta">
-                <p class="brand-name">NIKE</p>
-                <p class="product-name">Air Max 270</p>
-                <p class="product-category">For Men</p>
+                <p class="brand-name"><%= product.brandName %></p>
+                <p class="product-name"><%= product.itemName %></p>
+                <p class="product-category">For <%= product.gender %></p>
             </div>
             <div class="price">
-                <span>Rs. 1270</span>
+                <span>Rs. <%= product.price %></span>
             </div>
         </div>
         <div class="size-options">
             <p>Choose your size</p>
             <div class="sizes">
-                <section class="size-card">
-                    <p class="size">36</p>
-                    <p class="sizing-system">EU</p>
-                </section>
-                <section class="size-card">
-                    <p class="size">36</p>
-                    <p class="sizing-system">EU</p>
-                </section>
-                <section class="size-card">
-                    <p class="size">36</p>
-                    <p class="sizing-system">EU</p>
-                </section>
-                <section class="size-card">
-                    <p class="size">36</p>
-                    <p class="sizing-system">EU</p>
-                </section>
-                <section class="size-card">
-                    <p class="size">36</p>
-                    <p class="sizing-system">EU</p>
-                </section>
-                <section class="size-card">
-                    <p class="size">36</p>
-                    <p class="sizing-system">EU</p>
-                </section>
-                <section class="size-card">
-                    <p class="size">36</p>
-                    <p class="sizing-system">EU</p>
-                </section>
-                <section class="size-card">
-                    <p class="size">36</p>
-                    <p class="sizing-system">EU</p>
-                </section>
+
+                <% for(sizingSystem in product.sizes){ %>
+                    <% product.sizes[sizingSystem].forEach((size) => { %>
+                    <section class="size-card">
+                        <p class="size"><%= size %></p>
+                        <p class="sizing-system"><%= sizingSystem %></p>
+                    </section>
+                    <% }); %>
+                <% } %>
+
             </div>
         </div>
 
         <div class="actions">
-            <a href="/add-to-cart/productId" class="custom-link2">
+            <a href="/add-to-cart/<%= product._id %>" class="custom-link2">
                 <i class="fas fa-shopping-cart"></i> Add to Cart
             </a>
-            <a href="/add-to-cart/productId">
+            <a href="/add-to-cart/<%= product._id %>">
                 <i class="far fa-heart"></i> Add to Wishlist
             </a>
         </div>
