--- a/public/styles/auth.css
+++ b/public/styles/auth.css
@@ -24,3 +24,9 @@ form p a{
     font-weight: 800;
     font-style: italic;
 }
+
+form .err-msg{
+    color: var(--cherryred);
+    font-weight: 800;
+    font-style: italic;
+}
