--- a/public/styles/cart.css
+++ b/public/styles/cart.css
@@ -33,10 +33,12 @@ body{
     font-size: 2em;
     font-style: italic;
     font-weight: 800;
+    text-transform: uppercase;
 }
 
 .product-name{
     font-size: 1.05em;
+    text-transform: capitalize;
 }
 
 .quantity-wrapper{
@@ -67,6 +69,7 @@ body{
 
 .details > *{
     margin-right: 7px;
+    text-transform: capitalize;
 }
 
 .amount-wrapper{
