--- a/public/styles/product.css
+++ b/public/styles/product.css
@@ -1,7 +1,7 @@
 .product{
     display: grid;
     grid-template-columns: 2fr 1fr;
-    margin-top: 50px;
+    padding: var(--whitespace);
 }
 
 .image-wrapper{
@@ -12,7 +12,7 @@
 }
 
 .image-wrapper img{
-    width: 100%;
+    height: 100%;
 }
 
 .main{
@@ -25,10 +25,12 @@
     font-size: 2.4em;
     font-weight: 800;
     font-style: italic;
+    text-transform: uppercase;
 }
 
 .product-name{
     font-size: 1.05em;
+    text-transform: uppercase;
 }
 
 .product-category{
