Feature: Add to wishlist feature added and app refractored

--- a/public/styles/cart.css
+++ b/public/styles/cart.css
@@ -2,6 +2,14 @@ body{
     background: #fff;
 }
 
+.no-items{
+    text-align: center;
+}
+
+.no-items .custom-link{
+    margin-top: 50px;
+}
+
 .products{
     padding: var(--whitespace);
 }
