--- a/views/wishlist.ejs
+++ b/views/wishlist.ejs
@@ -3,9 +3,9 @@
 <%- include ./partials/header %>
 
 <div class="products-wrapper">
-    <% for(let i=0; i<=10; i++){ %>
-    <% include ./shop/partials/product-card %>
-    <% } %>
+    <% products.forEach((product) => { %>
+    <%- include ./shop/partials/product-card %>
+    <% }); %>
 </div>
 
 <%- include ./partials/footer %>
