--- a/views/shop/partials/product-card.ejs
+++ b/views/shop/partials/product-card.ejs
@@ -5,7 +5,7 @@
     </div>
     <img class="image" src="<%= product.imagePath %>" alt="<%= `${product.brandName} ${product.itemName} `%>">
     <div class="options">
-        <span class="price"><%= product.price %></span>
+        <span class="price">Rs.<%= product.price %></span>
         <a href="/add-to-wishlist/<%= product._id %>"><i class="far fa-heart"></i></a>
         <a href="/add-to-cart/<%= product._id %>"><i class="fas fa-shopping-cart"></i></a>
     </div>
