--- a/views/shop/product.ejs
+++ b/views/shop/product.ejs
@@ -39,7 +39,7 @@
             <a href="/add-to-cart/<%= product._id %>" class="custom-link2">
                 <i class="fas fa-shopping-cart"></i> Add to Cart
             </a>
-            <a href="/add-to-cart/<%= product._id %>">
+            <a href="/add-to-wishlist/<%= product._id %>">
                 <i class="far fa-heart"></i> Add to Wishlist
             </a>
         </div>
