--- a/views/checkout/checkout.ejs
+++ b/views/checkout/checkout.ejs
@@ -7,7 +7,7 @@
 <div class="wrapper">
     <h2>SHIPPING DETAILS</h2>
 
-    <form action="" method="">
+    <form id="checkout-form" action="/checkout?id=<%= order._id %>" method="post">
         <div class="two">
             <input type="text" name="f_name" id="f_name" placeholder="First Name" required>
             <input type="text" name="l_name" id="l_name" placeholder="Last Name" required>
@@ -25,10 +25,17 @@
             <input type="number" name="mobile" id="mobile" placeholder="Phone" required>
         </div>
 
-        <button class="custom-link2" type="submit">Pay Rs. 1240</button>
+        <input type="hidden" name="order_id" id="order_id" value="<%= order.order_id %>" required>
+        <input type="hidden" name="amount" id="amount" value="<%= order.amount %>" required>
+        
+        <button id="rzp-button1" class="custom-link2" type="submit">Pay Rs.<%=cartSession.totalPrice%></button>
     </form>
+    
 </div>
 
 <%- include ../partials/footer %>
+
+<script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+<script src="/scripts/checkout.js"></script>
 
 <%- include ../partials/end %>
