--- a/views/checkout/cart.ejs
+++ b/views/checkout/cart.ejs
@@ -14,7 +14,7 @@
     <% products.forEach((product) => { %>
     <div class="product">
         <div class="image-wrapper">
-            <img src="<%= product.item.imagePath %>" alt="<%=`${product.item.brandName} ${product.item.itemName}`%>">
+            <img src="<%= product.item.horizontalImagePath %>" alt="<%=`${product.item.brandName} ${product.item.itemName}`%>">
         </div>
         <div class="info">
             <section class="meta">
