--- a/views/shop/product.ejs
+++ b/views/shop/product.ejs
@@ -6,7 +6,7 @@
 
 <div class="product">
     <div class="image-wrapper">
-        <img src="<%= product.imagePath %>" alt="<%=`${product.brandName} ${product.itemName}`%>">
+        <img src="<%= product.horizontalImagePath %>" alt="<%=`${product.brandName} ${product.itemName}`%>">
     </div>
     <div class="info">
         <div class="main">
