--- a/public/styles/common.css
+++ b/public/styles/common.css
@@ -11,7 +11,6 @@
     --black: #051026;
     --lightgrey: #EEECEC;
     --grey: #949494;
-    --darkblue: #051026;
     --offwhite: #FAFAFA;
     --royalblue: #051026;
     --cherryred: #E71C4C;
@@ -259,7 +258,8 @@ header{
     margin-right: 40px;
 }
 
-#user-nav-wrapper nav > a{
+#user-nav-wrapper nav > a,
+#user-nav-wrapper nav > span{
     margin-right: 40px;
 }
 
