--- a/views/home.ejs
+++ b/views/home.ejs
@@ -62,6 +62,7 @@
     </div>
 </div>
 
+<!-- 
 <div class="popular-products">
     <div class="title">
         <h1>THE MOST<span>POPULAR</span></h1>
@@ -88,7 +89,7 @@
 
 <div class="banner">
     <img src="/images/home/last-section.svg" alt="Future Is Here">
-</div>
+</div> -->
 
 
 <%- include ./partials/footer %>
