--- a/views/index.ejs
+++ b/views/index.ejs
@@ -39,11 +39,11 @@
                     <% if(userIsLoggedIn){ %>
                     <span><i class="far fa-user"></i></span>
                     <section class="dropdown">
-                        <a href="/user/orders">Your Orders <i class="fas fa-tags"></i></a>
-                        <a href="/user/logout">Logout <i class="fas fa-sign-out-alt"></i></a>
+                        <a href="/orders">Your Orders <i class="fas fa-tags"></i></a>
+                        <a href="/logout">Logout <i class="fas fa-sign-out-alt"></i></a>
                     </section>
                     <% } else{ %>
-                    <a href="/user/signin"><i class="far fa-user"></i></a>
+                    <a href="/signin"><i class="far fa-user"></i></a>
                     <% } %>
                 </div>
                 <a href="/wishlist"><i class="far fa-heart"></i></a>
@@ -62,7 +62,6 @@
     </div>
 </div>
 
-<!-- 
 <div class="popular-products">
     <div class="title">
         <h1>THE MOST<span>POPULAR</span></h1>
@@ -89,7 +88,7 @@
 
 <div class="banner">
     <img src="/images/home/last-section.svg" alt="Future Is Here">
-</div> -->
+</div>
 
 
 <%- include ./partials/footer %>
