--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -31,11 +31,11 @@
                 <% if(userIsLoggedIn){ %>
                 <span><i class="far fa-user"></i></span>
                 <section class="dropdown">
-                    <a href="/user/orders">Your Orders <i class="fas fa-tags"></i></a>
-                    <a href="/user/logout">Logout <i class="fas fa-sign-out-alt"></i></a>
+                    <a href="/orders">Your Orders <i class="fas fa-tags"></i></a>
+                    <a href="/logout">Logout <i class="fas fa-sign-out-alt"></i></a>
                 </section>
                 <% } else{ %>
-                <a href="/user/signin"><i class="far fa-user"></i></a>
+                <a href="/signin"><i class="far fa-user"></i></a>
                 <% } %>
             </div>
             <a href="/wishlist"><i class="far fa-heart"></i></a>
