--- a/views/shop/checkout.ejs
+++ b/views/shop/checkout.ejs
@@ -7,7 +7,7 @@
 <div class="wrapper">
     <h2>SHIPPING DETAILS</h2>
 
-    <form id="checkout-form" action="/checkout?id=<%= order._id %>" method="post">
+    <form id="checkout-form" action="/checkout" method="post">
         <div class="two">
             <input type="text" name="f_name" id="f_name" placeholder="First Name" required>
             <input type="text" name="l_name" id="l_name" placeholder="Last Name" required>
@@ -25,12 +25,10 @@
             <input type="number" name="mobile" id="mobile" placeholder="Phone" required>
         </div>
 
-        <input type="hidden" name="order_id" id="order_id" value="<%= order.order_id %>" required>
-        <input type="hidden" name="amount" id="amount" value="<%= order.amount %>" required>
+        <input type="hidden" name="amount" id="amount" value="<%= cartSession.totalPrice %>" required>
         
         <button id="rzp-button1" class="custom-link2" type="submit">Pay Rs.<%=cartSession.totalPrice%></button>
     </form>
-    
 </div>
 
 <%- include ../partials/footer %>
