--- a/views/user/orders.ejs
+++ b/views/user/orders.ejs
@@ -1,25 +1,25 @@
-<%- include ./partials/head %>
+<%- include ../partials/head %>
 
 <!-- Page specific stylesheet -->
 <link rel="stylesheet" href="/styles/orders.css" type="text/css">
 
-<%- include ./partials/header %>
+<%- include ../partials/header %>
 
 <div class="orders-wrapper">
-    <% if(orders.length === 0){ %>
+    <% if(orders.length){ %>
+
+    <% orders.forEach((order) => { %>
+        <%- include ./partials/order-card %>
+    <% }); %>
+
+    <% } else { %>
     <div class="no-items">
         <h2>No Orders Yet</h2>
         <a href="/products/all" class="custom-link">SHOP WITH US</a>
     </div>
-    <% } else { %>
-    
-    <% orders.forEach((order) => { %>
-        <%- include ./shop/partials/order-card %>
-    <% }); %>
-
     <% } %>
 </div>
 
-<%- include ./partials/footer %>
+<%- include ../partials/footer %>
 
-<%- include ./partials/end %>
+<%- include ../partials/end %>
