scripts bundled and transpiled by webpack + babel

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -94,7 +94,6 @@
 <%- include ./partials/footer %>
 
 <!-- basicScroll -->
-<script src="/lib/basicscroll.min.js"></script>
-<script src="/scripts/home.js"></script>
+<script src="/scripts/home-bundle.js"></script>
 
 <%- include ./partials/end %>
