--- a/views/shop/checkout.ejs
+++ b/views/shop/checkout.ejs
@@ -34,6 +34,6 @@
 <%- include ../partials/footer %>
 
 <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
-<script src="/scripts/checkout.js"></script>
+<script src="/scripts/checkout-bundle.js"></script>
 
 <%- include ../partials/end %>
